Tests/CompilerTests/negative/unused-value.hylo
//! no-std

fun foo() {
  ((),)
  return
}
