Tests/CompilerTests/negative/unused-value.diagnostics.expected
negative/unused-value.hylo:4.3-8: error: unused value of type '{Void}'
  ((),)
  ~~~~~
